<resources>
    <string name="app_name">SimpleForm</string>
    <string name="company_name">Amar Bank</string>
    <string name="alternate_app_name">Tunaiku</string>
    <string name="developer_label">Created by Imam Sulthon</string>

    // form input: label and hints
    <string name="page_form_title_personal_info">Informasi Personal</string>
    <string name="field_label_id_card">Nomor KTP</string>
    <string name="field_label_full_name">Nama Lengkap</string>
    <string name="field_label_bank_account">Nomor Rekening</string>
    <string name="field_label_id_education">Pendidikan</string>
    <string name="field_label_full_dob">Tanggal lahir (DD/MM/YYYY)</string>
    <string name="btn_save">Simpan</string>
    <string name="btn_save_continue">Simpan &amp; Lanjut</string>
    <string name="btn_done">Selesai</string>
    <string name="btn_submit">Submit</string>

    <string name="page_form_title_address_info">Detail Alamat</string>
    <string name="field_label_address">Alamat Domisili</string>
    <string name="field_label_address_no">No</string>
    <string name="field_label_housing">Tipe Tempat Tinggal</string>
    <string name="field_label_province">Provinsi</string>
    <string name="text_place_holder_long">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry</string>

    <string name="page_form_title_review">Informasi Registrasi</string>

    <string-array name="education_array">
        <item>Pilihan…</item>
        <item>SD</item>
        <item>SMP</item>
        <item>SMA</item>
        <item>S1</item>
        <item>S2</item>
        <item>S3</item>
    </string-array>


    <string-array name="housing_type_array">
        <item>Pilihan…</item>
        <item>Rumah</item>
        <item>Kantor</item>
    </string-array>

</resources>