<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/appbar"
        layout="@layout/toolbar_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btn_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="Masukan Rincian Alamat Anda" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_id_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:hint="@string/field_label_address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_id_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxEms="16" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_housing"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/field_label_housing"
                    app:layout_constraintEnd_toStartOf="@id/spinner_housing"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.5">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_housing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false" />

                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/spinner_housing"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/til_housing"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.5" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:hint="@string/field_label_address_no">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textCapWords|textCapSentences"
                    tools:text="B2 18" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_education"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/field_label_province"
                    app:layout_constraintEnd_toStartOf="@id/spinner_province"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.5">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_education"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false" />

                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/spinner_province"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/til_education"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.5" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/purple_500"
        android:padding="8dp"
        android:text="@string/btn_save_continue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>