<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.page.review.ReviewPageActivity">

    <include
        android:id="@+id/appbar"
        layout="@layout/toolbar_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btn_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp">

                <TextView
                    android:id="@+id/tv_label_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/field_label_id_card"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@id/tv_value_id_number"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.4" />

                <TextView
                    android:id="@+id/tv_value_id_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:paddingStart="10dp"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_label_id"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.6"
                    tools:text="@string/field_label_id_card" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp">

                <TextView
                    android:id="@+id/tv_label_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/field_label_full_name"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@id/tv_value_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.4" />

                <TextView
                    android:id="@+id/tv_value_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:paddingStart="10dp"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_label_name"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.6"
                    tools:text="@string/field_label_id_card" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp">

                <TextView
                    android:id="@+id/tv_label_bank"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/field_label_bank_account"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@id/tv_value_bank"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.4" />

                <TextView
                    android:id="@+id/tv_value_bank"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:paddingStart="10dp"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_label_bank"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.6"
                    tools:text="@string/field_label_bank_account" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp">

                <TextView
                    android:id="@+id/tv_label_edu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/field_label_id_education"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@id/tv_value_edu"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.4" />

                <TextView
                    android:id="@+id/tv_value_edu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:paddingStart="10dp"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_label_edu"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.6"
                    tools:text="@string/field_label_id_education" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp">

                <TextView
                    android:id="@+id/tv_label_dob"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/field_label_full_dob"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@id/tv_value_dob"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.4" />

                <TextView
                    android:id="@+id/tv_value_dob"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:paddingStart="10dp"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_label_dob"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.6"
                    tools:text="@string/field_label_full_dob" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp">

                <TextView
                    android:id="@+id/tv_label_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/page_form_title_address_info"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@id/tv_value_address"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.4" />

                <TextView
                    android:id="@+id/tv_value_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:paddingStart="10dp"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_label_address"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.6"
                    tools:text="@string/text_place_holder_long" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp">

                <TextView
                    android:id="@+id/tv_label_province"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/field_label_province"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@id/tv_value_province"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.4" />

                <TextView
                    android:id="@+id/tv_value_province"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:paddingStart="10dp"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_label_province"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.6"
                    tools:text="@string/field_label_province" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp">

                <TextView
                    android:id="@+id/tv_label_house"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/field_label_housing"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@id/tv_value_house"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.4" />

                <TextView
                    android:id="@+id/tv_value_house"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:paddingStart="10dp"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_label_house"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.6"
                    tools:text="@string/field_label_housing" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/purple_500"
        android:padding="8dp"
        android:text="@string/btn_save_continue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:outlineSpotShadowColor="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>